--- a/src/styles/project.module.scss
+++ b/src/styles/project.module.scss
@@ -1,23 +1,32 @@
-.body{
-    background-color: green;
+.body {
+  background-color: green;
 }
 
 .content {
-    padding:4rem 0;
+  padding: 4rem 0;
 }
 
 .title {
-    text-align: center;
-    padding:2rem 0;
+  text-align: center;
+  padding: 2rem 0;
 }
 
 .row {
-    padding:1rem 0;
+  padding: 1rem 0;
 }
 
-.information{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
+.information {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  p {
+    font-weight: lighter;
+    span {
+        font-weight: bolder;
+        font-size: 1.5rem;
+      }
+    }
+    
+  }
+
