--- a/src/styles/projectOverview.module.scss
+++ b/src/styles/projectOverview.module.scss
@@ -1,5 +1,4 @@
 
-
 .link{
     &:hover{
         text-decoration: none;
@@ -24,6 +23,7 @@
         font-weight:bolder;
         color:#FCFFFC;
         text-decoration: none;
+        padding:0 4rem;
         }   
         }
     &:hover{
