--- a/src/styles/projectOverview.module.scss
+++ b/src/styles/projectOverview.module.scss
@@ -1,33 +1,64 @@
+$break-large: 992px;
 
-.link{
-    &:hover{
-        text-decoration: none;
-        display:block;
+.link {
+  height: 400px;
+  &:hover {
+    text-decoration: none;
+  }
+  .parent {
+    height: 400px;
+    margin: 1rem 0;
+    position: relative;
+    overflow: hidden;
+  }
+  @media screen and (min-width: $break-large) {
+    .parent:hover .item,
+    .parent:focus .item {
+      transform: scale(1.2);
+      box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
     }
-.item {
-    height:400px;
-    width:100%;
+  }
+
+  .item {
+    @media screen and (max-width: $break-large) {
+        box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7)
+    }
+    transition: all 0.5s;
+    height: 100%;
+    width: 100%;
     background-size: cover;
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin:1rem 0;
     background-repeat: no-repeat;
     background-position: center center;
     text-align: center;
-    box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
-        .itemText{
-        background-color:transparent;
-        font-size:2rem;
-        font-weight:bolder;
-        color:#FCFFFC;
-        text-decoration: none;
-        padding:0 4rem;
-        }   
-        }
-    &:hover{
-        box-shadow:none;
-        text-decoration: none;
+    
+    .itemText {
+      background-color: transparent;
+      font-size: 2rem;
+      font-weight: bolder;
+      color: #fcfffc;
+      text-decoration: none;
+      padding: 0 4rem;
     }
+  }
+  &:hover {
+    box-shadow: none;
+    text-decoration: none;
+  }
 }
+
+@media screen and (max-width: $break-large) {
+    .scrollContainer {
+        height:100vh;
+        scroll-snap-type: mandatory;
+        scroll-snap-type: y mandatory;
+        overflow-y: scroll;
+    }
+    .scrollElement {
+        scroll-snap-align: center;
+        scroll-snap-stop:always;
+    }}
+
