--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,12 +70,10 @@ body {
   .projects {
     padding: 2rem 0;
     text-align: center;
-    background-color: #1d1e18;
+    background-color: #E5E4DF;
     h1 {
       padding: 2rem 0;
-      color: #fcfffc;
+      color: #0B0B09;
     }
-    .row {
-        color:green;
-    }
+    
 }
