--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,5 +1,5 @@
 .nav {
-    background-color: #1D1E18;
+    background-color: #0B0B09;
     .navlink {
         color:#FCFFFC !important;
         &:hover{
