--- a/src/styles/projectOverview.module.scss
+++ b/src/styles/projectOverview.module.scss
@@ -10,6 +10,8 @@ $break-large: 992px;
     margin: 1rem 0;
     position: relative;
     overflow: hidden;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+
   }
   @media screen and (min-width: $break-large) {
     .parent:hover .item,
@@ -50,15 +52,15 @@ $break-large: 992px;
   }
 }
 
-@media screen and (max-width: $break-large) {
-    .scrollContainer {
-        height:100vh;
-        scroll-snap-type: mandatory;
-        scroll-snap-type: y mandatory;
-        overflow-y: scroll;
-    }
-    .scrollElement {
-        scroll-snap-align: center;
-        scroll-snap-stop:always;
-    }}
+// @media screen and (max-width: $break-large) {
+//     .scrollContainer {
+//         height:100vh;
+//         scroll-snap-type: mandatory;
+//         scroll-snap-type: y mandatory;
+//         overflow-y: scroll;
+//     }
+//     .scrollElement {
+//         scroll-snap-align: center;
+//         scroll-snap-stop:always;
+//     }}
 
