--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,10 +1,13 @@
+@import '/index.scss';
+
 .nav {
-    background-color: #0B0B09;
+    transition: top 0.3s;
+    background-color: $primary-color;
     .navlink {
-        color:#FCFFFC !important;
+        color:$secondary-color !important;
         &:hover{
             text-decoration: none;
-            color:#FCFFFC !important;
+            color:$secondary-color !important;
         }
     }
 }
