--- a/src/styles/project.module.scss
+++ b/src/styles/project.module.scss
@@ -1,9 +1,7 @@
-.body {
-  background-color: green;
-}
 
 .content {
-  padding: 4rem 0;
+  padding: 2rem 0;
+  background-color: #E5E4DF;
 }
 
 .title {
